--- a/TimeTable/TimeTable.csproj
+++ b/TimeTable/TimeTable.csproj
@@ -99,6 +99,7 @@
     <Compile Include="HelperClasses\clsGlobalParameters.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings.cs" />
     <EmbeddedResource Include="BaseObjects\myForm.resx">
       <DependentUpon>myForm.cs</DependentUpon>
     </EmbeddedResource>
