--- a/TimeTable/App.config
+++ b/TimeTable/App.config
@@ -1,13 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="TimeTable.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <connectionStrings>
         <add name="TimeTable.Properties.Settings.DatabaseConnectionString"
-            connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Data\Database.mdf;Integrated Security=True;Connect Timeout=30"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Data\Database.mdf;Integrated Security=True;Connect Timeout=30"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <applicationSettings>
+        <TimeTable.Properties.Settings>
+            <setting name="DebugMode" serializeAs="String">
+                <value>True</value>
+            </setting>
+        </TimeTable.Properties.Settings>
+    </applicationSettings>
 </configuration>
