--- a/TimeTable/App.config
+++ b/TimeTable/App.config
@@ -5,11 +5,7 @@
             <section name="TimeTable.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
-    <connectionStrings>
-        <add name="TimeTable.Properties.Settings.DatabaseConnectionString"
-            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Data\Database.mdf;Integrated Security=True;Connect Timeout=30"
-            providerName="System.Data.SqlClient" />
-    </connectionStrings>
+    <connectionStrings />
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
