--- a/TimeTable/TimeTable.csproj
+++ b/TimeTable/TimeTable.csproj
@@ -78,15 +78,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppLogic\clsAcademicYear.cs" />
     <Compile Include="AppLogic\clsClass.cs" />
     <Compile Include="AppLogic\clsParameters.cs" />
     <Compile Include="AppLogic\clsParametersDB.cs" />
     <Compile Include="AppLogic\clsRoom.cs" />
     <Compile Include="AppLogic\clsStudent.cs" />
+    <Compile Include="AppLogic\clsDepartment.cs" />
+    <Compile Include="AppLogic\clsSubject.cs" />
     <Compile Include="AppLogic\clsTimeTableEntry.cs" />
     <Compile Include="AppLogic\clsTutor.cs" />
     <Compile Include="AppLogic\clsTimeTableEntryDB.cs" />
     <Compile Include="AppLogic\clsTutorDB.cs" />
+    <Compile Include="AppLogic\clsStudentClassLink.cs" />
     <Compile Include="UserControls\DayHourPicker.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -147,6 +151,7 @@
     <EmbeddedResource Include="UserControls\DayHourPicker.resx">
       <DependentUpon>DayHourPicker.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="ClassDiagram1.cd" />
     <None Include="Properties\app.manifest" />
     <None Include="Properties\DataSources\TimeTable.AppLogic.clsTutorDB.datasource" />
     <None Include="Properties\Settings.settings">
