Created Department form and supporting class/store procedures

--- a/TimeTable/TimeTable.csproj
+++ b/TimeTable/TimeTable.csproj
@@ -59,11 +59,13 @@
   <PropertyGroup>
     <TargetZone>LocalIntranet</TargetZone>
   </PropertyGroup>
-  <PropertyGroup>
-    <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
-  </PropertyGroup>
+  <PropertyGroup />
   <PropertyGroup>
     <SignManifests>false</SignManifests>
+  </PropertyGroup>
+  <PropertyGroup />
+  <PropertyGroup>
+    <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -89,8 +91,16 @@
     <Compile Include="AppLogic\clsTimeTableEntry.cs" />
     <Compile Include="AppLogic\clsTutor.cs" />
     <Compile Include="AppLogic\clsTimeTableEntryDB.cs" />
+    <Compile Include="AppLogic\clsSubjectDB.cs" />
+    <Compile Include="AppLogic\clsDepartmentDB.cs" />
     <Compile Include="AppLogic\clsTutorDB.cs" />
     <Compile Include="AppLogic\clsStudentClassLink.cs" />
+    <Compile Include="Forms\frmDepartment.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\frmDepartment.Designer.cs">
+      <DependentUpon>frmDepartment.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\DayHourPicker.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -129,6 +139,9 @@
     <Compile Include="Settings.cs" />
     <EmbeddedResource Include="Forms\frmAbout.resx">
       <DependentUpon>frmAbout.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\frmDepartment.resx">
+      <DependentUpon>frmDepartment.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmWorkingPattern.resx">
       <DependentUpon>frmWorkingPattern.cs</DependentUpon>
